// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesignCitation renders  component with a mock espace record 1`] = `
<div>
  <div
    class="citationContent citationDesign"
  >
    <span
      class="citationAuthors"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        Dickson, Michael
      </span>
       and 
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        Francis, Mara
      </span>
       
    </span>
    <span
      class="citationDate"
    >
      (
      2017
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Site setting and circumstance: A house and courtyard garden, Riga, Latvia
      .
    </span>
    <span
      class="citationSource empty"
    />
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;

exports[`DesignCitation renders  component with an empty source 1`] = `
<div>
  <div
    class="citationContent citationDesign"
  >
    <span
      class="citationAuthors"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        Dickson, Michael
      </span>
       and 
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        Francis, Mara
      </span>
       
    </span>
    <span
      class="citationDate"
    >
      (
      2017
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Site setting and circumstance: A house and courtyard garden, Riga, Latvia
      .
    </span>
    <span
      class="citationSource empty"
    />
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;

exports[`DesignCitation renders  component with empty publication 1`] = `
<div>
  <div
    class="citationContent citationDesign"
  >
    <span
      class="citationAuthors empty"
    />
    <span
      class="citationDate empty"
    />
    <span
      class="citationTitle empty"
    />
    <span
      class="citationSource empty"
    />
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;
